Develope the structure of the first tag

--- a/Tags.html
+++ b/Tags.html
@@ -6,11 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SuperDoc-Tag</title>
 </head>
-<body>
-    <div class="SuperDoc__Container">
-        <div class="SuperDoc__Container-Tag">
-            <img src="" alt="">
+<body style="background-color: black;">
+
+    <div class="SuperDoc__Container" style="display: flex; justify-content:space-between; margin: 2rem; text-align: center; align-items: center;">
+
+        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column;" >
+            <img src="./Assets/expediente_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 100%; width: 100%; opacity: 0.5; border-radius: 20px; cursor: pointer;">
+            <p style="color: white; position: absolute; top:8rem">Mi Expediente</p>
         </div>
+
+        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column;" >
+            <img src="./Assets/expediente_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 100%; width: 100%; opacity: 0.5; border-radius: 20px;">
+            <p style="color: white; position: absolute; top:8rem">Mi Expediente</p>
+        </div>
+
+        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column;" >
+            <img src="./Assets/expediente_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 100%; width: 100%; opacity: 0.5; border-radius: 20px;">
+            <p style="color: white; position: absolute; top:8rem">Mi Expediente</p>
+        </div>
+
     </div>
 </body>
 </html>
