Configure the tags to have a responsive desing

--- a/Tags.html
+++ b/Tags.html
@@ -6,23 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SuperDoc-Tag</title>
 </head>
-<body style="background-color: black;">
+<body style="margin: 0; padding: 0; box-sizing: border-box;">
 
-    <div class="SuperDoc__Container" style="display: flex; justify-content:space-between; margin: 2rem; text-align: center; align-items: center;">
+    <!-- Contenedor de nuestras componentes -->
+    <div class="SuperDoc__Container" style=" display: flex; justify-content:space-between; margin: 2rem; height: 100vh; text-align: center; align-items: center; position: relative;">
 
-        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column;" >
-            <img src="./Assets/expediente_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 100%; width: 100%; opacity: 0.5; border-radius: 20px; cursor: pointer;">
-            <p style="color: white; position: absolute; top:8rem">Mi Expediente</p>
+        <!-- Primer componente -->
+        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column; cursor: pointer; margin: 2rem;" >
+            <!-- Generar el ingreso de direccion a la cual se desea llegar entre las comillas de la etiqueta href="" -->
+           <a href="https://www.youtube.com/watch?v=6ktnrKG8uq4"><img src="./Assets/expediente_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 228px; width: 100%;border-radius: 20px; box-shadow: 5px 5px 5px black;
+            "></a>
+            <p style="font-size: large; font-weight: 400; position: absolute; top:50%; color:white">Mi Expediente</p>
         </div>
 
-        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column;" >
-            <img src="./Assets/expediente_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 100%; width: 100%; opacity: 0.5; border-radius: 20px;">
-            <p style="color: white; position: absolute; top:8rem">Mi Expediente</p>
+        <!-- Primer componente -->
+        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column; cursor: pointer; margin: 2rem;" >
+            <!-- Generar el ingreso de direccion a la cual se desea llegar entre las comillas de la etiqueta href="" -->
+           <a href="https://www.youtube.com/watch?v=6ktnrKG8uq4"><img src="./Assets/cita_superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 228px; width: 100%;border-radius: 20px; box-shadow: 5px 5px 5px black;
+            "></a>
+            <p style="font-size: large; font-weight: 400; position: absolute; top:50%; color:white">Mi Expediente</p>
         </div>
 
-        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column;" >
-            <img src="./Assets/expediente_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 100%; width: 100%; opacity: 0.5; border-radius: 20px;">
-            <p style="color: white; position: absolute; top:8rem">Mi Expediente</p>
+        <!-- Primer componente -->
+        <div class="SuperDoc__Container-Tag" style="display: flex; align-items: center; flex-direction: column; cursor: pointer; margin: 2rem;" >
+            <!-- Generar el ingreso de direccion a la cual se desea llegar entre las comillas de la etiqueta href="" -->
+           <a href="https://www.youtube.com/watch?v=6ktnrKG8uq4"><img src="./Assets/pago_Superdoc.jpeg" alt="Expediente-SuperDoc" style="height: 228px; width: 100%;border-radius: 20px; box-shadow: 5px 5px 5px black;
+            "></a>
+            <p style="font-size: large; font-weight: 400; position: absolute; top:50%; color:white">Mi Expediente</p>
         </div>
 
     </div>
